--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,7 +26,7 @@ const twitterimage = `${siteUrl}${ogimage.url}`;
 
 <html
   lang="en"
-  class="dark:bg-[#0E0E11] bg-mint-50/5 font-montserrat scroll-smooth"
+  class="dark:bg-gray-950 bg-gray-50 font-montserrat scroll-smooth"
 >
   <head>
     <meta charset="UTF-8" />
@@ -66,7 +66,7 @@ const twitterimage = `${siteUrl}${ogimage.url}`;
     <meta name="twitter:image:alt" content={ogimage.alt} />
     <meta name="twitter:site" content={SEO.twitter} />
   
-    <meta name="theme-color" content="#0E0E11"/>
+    <meta name="theme-color" content="#0a0a0a"/>
 
     <!-- Sitemap -->
     <link rel="sitemap" href="/sitemap-index.xml" />
@@ -75,7 +75,7 @@ const twitterimage = `${siteUrl}${ogimage.url}`;
   <body class="overflow-x-hidden">
     <div class="blur-circle"></div>
     <div
-      style="background:linear-gradient(45deg, rgba(96, 250, 155, 0) 10.79%, rgba(96, 250, 170, 0.03) 40.92%, rgba(96, 250, 155, 0) 90.35%)"
+      style="background:linear-gradient(45deg, rgba(148, 163, 184, 0) 10.79%, rgba(148, 163, 184, 0.02) 40.92%, rgba(148, 163, 184, 0) 90.35%)"
       class="fixed top-0 left-0 w-full h-full pointer-events-none -z-1"
     >
     </div>
@@ -90,6 +90,7 @@ const twitterimage = `${siteUrl}${ogimage.url}`;
     
     <script>
       import "../scripts/menu.js";
+      import "../scripts/i18n.js";
     </script>
   </body>
 </html>
