--- a/src/components/portfolio/Contact.astro
+++ b/src/components/portfolio/Contact.astro
@@ -9,7 +9,7 @@ const [staticData] = await getCollection('staticData');
 
 <section id="contact">
   <div
-    class="w-full bg-linear-to-b from-mint-100 to-transparent dark:from-mint-800"
+    class="w-full bg-linear-to-b from-gray-50 to-transparent dark:from-gray-900"
   >
     <div class="mx-auto max-w-5xl px-8 py-16 max-sm:py-12">
       <div class="flex items-center justify-between max-sm:flex-col max-sm:gap-8 max-sm:text-center">
