--- a/src/components/portfolio/Hobbie.astro
+++ b/src/components/portfolio/Hobbie.astro
@@ -3,7 +3,7 @@ const { tag } = Astro.props;
 ---
 
 <span
-    class="px-4 py-1 rounded-full text-sm font-medium text-zinc-500 dark:text-neutral-400 hover:text-blacktext bg-riptide-50 dark:bg-zinc-800 hover:bg-mint-200 cursor-default transition-all ease-in-out duration-300"
+    class="px-4 py-1 rounded-full text-sm font-medium text-gray-600 dark:text-gray-400 hover:text-blacktext bg-accent-50 dark:bg-gray-800 border border-accent-200 dark:border-gray-700 hover:bg-accent-100 dark:hover:bg-gray-700 cursor-default transition-all ease-in-out duration-300"
 >
 {tag}
 </span>
