--- a/src/components/ui/Tag.astro
+++ b/src/components/ui/Tag.astro
@@ -4,7 +4,7 @@ const { tag, forceDark = false } = Astro.props;
 
 <a
   href={`/blog/tags/${tag}`}
-  class={`max-md:text-xs text-sm font-medium ${forceDark ? 'text-neutral-400 bg-zinc-800' : 'text-zinc-500 dark:text-neutral-400 hover:text-blacktext'} transition-all ease-in-out duration-300 px-4 py-1 max-md:px-3 rounded-full ${forceDark ? 'bg-zinc-800' : 'bg-mint-950/5 dark:bg-zinc-800 hover:bg-mint-200'}`}
+  class={`max-md:text-xs text-sm font-medium ${forceDark ? 'text-gray-400 bg-gray-800' : 'text-gray-600 dark:text-gray-400 hover:text-blacktext'} transition-all ease-in-out duration-300 px-4 py-1 max-md:px-3 rounded-full border ${forceDark ? 'bg-gray-800 border-gray-700' : 'bg-accent-50 dark:bg-gray-800 border-accent-200 dark:border-gray-700 hover:bg-accent-100 dark:hover:bg-gray-700'}`}
 >
   {tag}
 </a>
