feat: -New blog post - Addedtechnical documentation. - Updated blog index - Open Source Contributions page - Enhanced language utility

--- a/src/components/layout/Navigation.astro
+++ b/src/components/layout/Navigation.astro
@@ -23,6 +23,10 @@ const menu = {
   home: { name: "Home", path: "/#home" },
   experience: { name: "Experience", path: "/#experience" },
   projects: { name: "Projects", path: "/#projects" },
+  "open source": {
+    name: "Open Source",
+    path: "/open-source",
+  },
 };
 
 // Common base classes
