--- a/src/components/portfolio/Experience.astro
+++ b/src/components/portfolio/Experience.astro
@@ -16,7 +16,7 @@ const EXPERIENCE = [
     title: "DevOps Apprentice",
     company: "La Poste (French National Postal Service)",
     description:
-      "Development and maintenance of web and mobile applications using Flutter, Kuzzle, and GitLab CI pipelines on Kubernetes infrastructure. Currently working on topics related to DevOps, AI, IoT, and cloud cost optimization.",
+      "Development and maintenance of web and mobile applications using Flutter, Kuzzle, and GitLab CI pipelines on Kubernetes infrastructure. Currently working on topics related to DevOps and AI.",
   },
   {
     date: "April 2023 - July 2023",
