--- a/src/layouts/MarkdownAbout.astro
+++ b/src/layouts/MarkdownAbout.astro
@@ -71,7 +71,7 @@ const { frontmatter } = Astro.props;
                 class="bg-linear-to-r from-riptide-400 to-purple-500 dark:to-purple-200 dark:from-riptide-300 text-transparent bg-clip-text"
                 >3 years of experience</b
               >, passionate about DevOps, technology, and AI. I love bringing
-              fun projects to life. 🚀☕
+              fun projects to life.
             </p>
           </div>
         </div>
@@ -96,7 +96,7 @@ const { frontmatter } = Astro.props;
     <div class="flex flex-col gap-8 max-w-3xl justify-center mx-auto">
       <div class="flex gap-4 items-center justify-center">
         <Icon class="text-3xl text-white" name="dashboard" />
-        <Heading text="Stack" textGradient="Technological" level={2} />
+        <Heading text="Technological" textGradient="Stack" level={2} />
       </div>
       <Tools variant="center" />
     </div>
