--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -19,8 +19,8 @@ const routes = ["/", "/portfolio", "/about-me"];
 const isActiveRoute = routes.includes(currentPath);
 
 const navItems = isActiveRoute
-  ? ["home", "experience", "projects", "about", "blog"]
-  : ["home", "blog", "about"]; // Change the items
+  ? ["home", "experience", "projects", "about", "open source", "blog"]
+  : ["home", "experience", "projects", "about","open source", "blog"]; // Change the items
 ---
 
 <header
