--- a/src/pages/blog/posts/index.astro
+++ b/src/pages/blog/posts/index.astro
@@ -6,7 +6,7 @@ import ListPosts from "../../../components/blog/ListPosts.astro";
 const pageTitle =
   "Web Development and Technology Blog | Sarah THEOULLE | Light";
 const description =
-  "Welcome to my blog, where I share my passion for frontend development, web design, and the latest technology trends.";
+  "Welcome to my blog, where I share my passion for everything that touches technology and computer science.";
 const ogimage = {
   url: "/images/blogimage.webp",
   alt: "Light.dev logo with green background and light effect. Text: 'Web Development and Technology Blog' and URL 'www.Light.dev'.",
