--- a/src/components/portfolio/ListProjects.astro
+++ b/src/components/portfolio/ListProjects.astro
@@ -28,12 +28,12 @@ allPosts.sort(
     >
       I love <b
         class="bg-linear-to-r from-riptide-500 to-mint-500 dark:from-riptide-300 dark:to-mint-200 text-transparent bg-clip-text"
-        >turning ideas into real projects.</b
+        >turning ideas from scratch into real projects.</b
       >
-      <br /> Here I show you some of the <b
+      <br /> Here I show you a few of the <b
         class="bg-linear-to-r from-riptide-500 to-mint-500 dark:from-riptide-300 dark:to-mint-200 text-transparent bg-clip-text"
         >developments</b
-      > I've worked on, applying technology, design, and lots of creativity.
+      > I've worked on latetly, applying technology, design, even 3D and lots of creativity.
       <b
         class="bg-linear-to-r from-riptide-500 to-mint-500 dark:from-riptide-300 dark:to-mint-200 text-transparent bg-clip-text"
         >Check them out!</b
